style/web/components/table/_index.less
/* ... */
// 表头右侧图标设计规范：有边框时，排序图标靠近右侧边框；无边框时，排序图标紧跟标题内容
.@{prefix}-table--bordered {
  .@{prefix}-table__cell--sortable,
  .@{prefix}-table__cell--filterable {
    .@{prefix}-table__cell--title {
      justify-content: space-between;
    }
  }
}

/**
 * 有边框和无边框的图标排列不一样，需谨慎修改
 * 无边框模式，图标依次紧跟标题
 * 有边框模式，只有一个图标时，图标靠近边框右侧；有两个图标时，排序图标靠近标题，过滤图标靠近边框右侧
 */
.@{prefix}-table__cell--sort-trigger {
  width: 20px;
  text-align: center;
  vertical-align: text-bottom;

  svg {
    vertical-align: initial;
  }
}

// 表格加载态
.@{prefix}-table--loading {
  position: relative;
}

.@{prefix}-table--loading-progressbar {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  height: 1px;
  background-color: @brand-color;
  animation: tTableProgressbar 2s ease-in-out;
  animation-fill-mode: both;
}

.@{prefix}-table--loading-message {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 120px;
  color: @text-color-disabled;
}

.@{prefix}-table__expanded-cell {
  padding-left: 45px;
}

.@{prefix}-table__async-loading {
  text-align: center;
}

.@{prefix}-table__async-loading.@{prefix}-is-load-more {
  cursor: pointer;
}

// 默认空表格
.@{prefix}-table__empty {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 120px;
  color: @table-color-empty;
}

.@{prefix}-table__filter-icon,
.@{prefix}-table__sort-icon {
  margin-left: 8px;
  background-color: transparent;
  display: inline-block;
  cursor: pointer;
  vertical-align: text-bottom;

  > svg {
    margin-top: -4px;
  }
}

// 当 Popup 去除包裹元素后，便不再需要这个样式
.@{prefix}-popup__reference.@{prefix}-table__filter-icon {
  margin-top: -4px;
}

.@{prefix}-table__sort-icon {
  // 排序图标临时效果，此处状态修改请慎重，需要背景色明确提醒用户点击区域（不建议将整个表头作为点击区域，还有过滤等其他图标）
  .@{prefix}-is-focus,
  &.@{prefix}-is-focus,
  &:hover {
    color: @table-icon-active-color;
    background-color: @table-icon-active-bg-color;
    border-radius: 50%;
  }
}

.@{prefix}-table__filter-icon {
  .@{prefix}-is-focus,
  &.@{prefix}-is-focus,
  &:hover {
    color: @table-icon-active-color;
  }
}

.@{prefix}-table__filter-pop {

  .@{prefix}-table__filter-pop-content {
    margin: -8px;

    .@{prefix}-table__filter-pop-content-inner {
      padding: 16px;
    }

    .@{prefix}-radio-group {
      display: block;
      height: auto;
    }

    .@{prefix}-checkbox-group {
      display: block;
    }
    .@{prefix}-checkbox,
    .@{prefix}-radio {
      display: block;
      line-height: 28px;
    }

    .@{prefix}-table__filter-pop-content-button {
      border-top: @border;
      padding: 16px;

      .t-button + .t-button {
        margin-left: @spacer-2;
      }
    }
  }
}

.@{prefix}-table__sort-icon--active {
  color: @table-icon-active-color;
}

.@{prefix}-table__double-icons {
  display: inline-grid;
  height: @table-line-height;

  // .@{prefix}-table__double-icons > .@{prefix}-popup__reference 是为了兼容 Popup 多余的包裹元素
  .@{prefix}-table__sort-icon,
  .@{prefix}-popup__reference {
    height: @table-line-height-half;
  }
  .@{prefix}-table-sort-asc {
    margin-top: -2px;
  }
  .@{prefix}-table-sort-desc {
    margin-top: -6px;
  }
}

// .@{prefix}-table__double-icons > .@{prefix}-popup__reference 是为了兼容 Popup 多余的包裹元素
.@{prefix}-popup__reference {
  .@{prefix}-table__filter-icon, .@{prefix}-table__sort-icon {
    vertical-align: initial;
  }
}

.@{prefix}-table__filter-icon-wrap {
  display: flex;
  align-items: center;
  pointer-events: all;
}

// 有边框模式，排序图标和过滤图标同时存在时，排序图标紧挨标题，过滤图标靠右侧边框
.@{prefix}-table--bordered {
  .@{prefix}-table__filter-icon-wrap {
    justify-content: flex-end;
  }
  .@{prefix}-table__cell--sortable.@{prefix}-table__cell--filterable {
    .@{prefix}-table__filter-icon-wrap {
      justify-content: space-between;
      flex: 1;
    }
  }
}

.@{prefix}-table__expand-box {
  padding: @table-td-padding-vertical-top @table-td-padding-horizontal
    @table-td-padding-vertical-bottom @table-td-padding-horizontal;
  display: inline-grid;
  vertical-align: middle;
  color: @table-icon-default-color;
  cursor: pointer;
  transition: all .2s ease 0s;
  align-items: center;

  &:hover {
    color: @table-icon-active-color;
  }
}

@keyframes tTableProgressbar {
  0% {
    width: 0;
  }

  100% {
    width: 100%;
  }
}

.@{prefix}-table-expandable-icon-cell + .@{prefix}-table__cell--selectable[key="row-select"] {
  padding-left: 10px;
}

.@{prefix}-table__filter--bottom-buttons {
  display: flex;
  justify-content: flex-end;
  padding: 16px;
  border-top: @border;
  > .@{prefix}-button + .@{prefix}-button {
    margin-left: 8px;
  }
}

.@{prefix}-table__row-filter-inner {
  position: sticky;
  left: 0;
  text-align: center;
}

.@{prefix}-table__filter-result {
  display: flex;
  align-items: center;
  justify-content: center;
  > .@{prefix}-button {
    margin-left: 8px;
  }
}

.@{prefix}-table--layout-fixed {
  table-layout: fixed;
}

.@{prefix}-table--layout-auto {
  table-layout: auto;
}

.@{prefix}-table__ellipsis {
  white-space: nowrap;
  width: 100%;
}

.@{prefix}-table__content {
  overflow: auto;
}

.@{prefix}-table-td--ellipsis {
  .@{prefix}-popup__reference {
    width: 100%;
    display: inline;
  }
}

// 可向左滚动时，左边显示固定列显示阴影，右边同理
.@{prefix}-table__content--scrollable-to-left {

  .@{prefix}-table__cell--fixed-left-last::after {
    box-shadow: inset 8px 0 8px -4px var(--td-table-shadow-color);
  }
}

.@{prefix}-table__content--scrollable-to-right {

  .@{prefix}-table__cell--fixed-right-first::after {
    box-shadow: inset -8px 0 8px -4px var(--td-table-shadow-color);
  }
}

.@{prefix}-table--affixed-header {
  .@{prefix}-table__content {
    th.@{prefix}-table__cell--fixed-left-last::after,
    th.@{prefix}-table__cell--fixed-right-first::after {
      box-shadow: none;
    }
  }
}

.@{prefix}-table__scroll-bar-divider {
  position: absolute;
  bottom: 0;
  right: 0;
  height: 100%;
  border-right: @border;
  z-index: @table-right-scrollbar-divider;
}

.@{prefix}-table__footer,
/* ... */

